--- a/DummyTests/DummyTests.csproj
+++ b/DummyTests/DummyTests.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="SampleModel.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="SampleModel.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EdmObjectsGenerator\EdmObjectsGenerator.csproj" />
