First attempt at dynamic dbcontext generation

--- a/EdmObjectsGenerator/App.config
+++ b/EdmObjectsGenerator/App.config
@@ -17,4 +17,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="SampleModel"
+          providerName="System.Data.SqlClient"
+          connectionString="Server=.\SQLEXPRESS;Database=SampleModel;Integrated Security=True;"/>
+  </connectionStrings>
 </configuration>
