--- a/EdmObjectsGenerator/EdmObjectsGenerator.csproj
+++ b/EdmObjectsGenerator/EdmObjectsGenerator.csproj
@@ -66,5 +66,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{48c5e45a-168f-4605-ab0d-edb76e8c26d3}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
