Add tweaked WebApi code an fix Post() method

--- a/AssemblyGenerator/AssemblyGenerator.csproj
+++ b/AssemblyGenerator/AssemblyGenerator.csproj
@@ -55,5 +55,10 @@
       <Name>EdmObjectsGenerator</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SampleModel.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
