--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="SampleModel_Assembly">
+      <HintPath>..\AssemblyGenerator\bin\Debug\SampleModel_Assembly.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
