--- a/DummyTests/DummyTests.csproj
+++ b/DummyTests/DummyTests.csproj
@@ -16,6 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoBogus" Version="2.12.0" />
+    <PackageReference Include="Bogus" Version="31.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EdmObjectsGenerator\EdmObjectsGenerator.csproj" />
   </ItemGroup>
 
